I adusted the padding and margins around the nav anchors to fix some vertical alignment issues.

--- a/01-Multi-Page-Web-Site/css/style.css
+++ b/01-Multi-Page-Web-Site/css/style.css
@@ -102,7 +102,7 @@ nav ul {
 nav ul li {
   display: inline-block;
   font-size: 1.125em;
-  margin:  2.25% 4px;
+  margin:  1.60% 4px 2%;
   padding: 0;
   min-width: 72px;
   height: 70%;
@@ -127,7 +127,7 @@ nav ul li:last-child {
 nav ul li a {
   display: block;
   height: 100%;
-  padding: 20px 4px;
+  padding: 16px 4px 20px;
 }
 
 a {
@@ -225,7 +225,7 @@ footer {
     margin: 0 4px 1%;
   }
   nav ul li a {
-    padding: 12px 4px 0;
+    padding: 8px 4px 0;
     height: 100%;
   }
   .home {
